--- a/www/views/search/search.html
+++ b/www/views/search/search.html
@@ -5,7 +5,7 @@
         <label class="item-input-wrapper">
           <input type="search" ng-model="model.term" placeholder="Search for a location">
         </label>
-        <button class="button button-small button-positive"
+        <button class="button-search button button-small button-positive"
         ng-click="search()">Submit</button>
       </div>
       <div class="item" ng-repeat="result in results" 
